[gd_scene load_steps=9 format=3 uid="uid://d2f5u7fnry5qq"]

[ext_resource type="Script" path="res://Summons/PD_missle_drone.gd" id="1_d30tj"]
[ext_resource type="Texture2D" uid="uid://btwjy1iyvsexu" path="res://Sprites/Summons/PointDefenceDrone.png" id="1_n5v1u"]
[ext_resource type="Texture2D" uid="uid://cv1wqtwmtxfwe" path="res://Sprites/Weapons/PDRocketsPod.png" id="2_4yopp"]
[ext_resource type="Resource" uid="uid://pvpr3cnj0onl" path="res://Resources/Guns/DroneGuns/PDRocketPod.tres" id="2_swjun"]

[sub_resource type="Animation" id="Animation_7cuwh"]
resource_name = "Idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12]
}

[sub_resource type="Animation" id="Animation_ma1uf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxxgv"]
_data = {
"Idle": SubResource("Animation_7cuwh"),
"RESET": SubResource("Animation_ma1uf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_r2om1"]
radius = 174.603

[node name="PDMissleDrone" type="Node2D"]
scale = Vector2(5, 5)
script = ExtResource("1_d30tj")
weapon = ExtResource("2_swjun")

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("1_n5v1u")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
root_node = NodePath("../BodySprite")
libraries = {
"": SubResource("AnimationLibrary_cxxgv")
}
speed_scale = 4.0

[node name="GunSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_4yopp")

[node name="Shoot_timer" type="Timer" parent="."]

[node name="Timer_reload" type="Timer" parent="."]

[node name="EnemyFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyFinder"]
shape = SubResource("CircleShape2D_r2om1")

[connection signal="timeout" from="Shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Timer_reload" to="." method="_on_timer_reload_timeout"]
[connection signal="area_entered" from="EnemyFinder" to="." method="_on_enemy_finder_body_entered"]
[connection signal="area_exited" from="EnemyFinder" to="." method="_on_enemy_finder_body_exited"]
